# prometheus-anomaly-detection-lstm

./: .gitignore  AGENTS.md  Makefile  Pipfile  cli.py  config.yaml  data_collector.py  filter_anomalous_data.py  preprocess_data.py  pyproject.toml  readme.md  realtime_detector.py  requirements.lock.txt  train_autoencoder.py
.github/workflows/: publish.yml
