[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-anomaly-detection-lstm"
version = "0.1.2"
description = "Prometheus time series anomaly detection with LSTM Autoencoder"
readme = "readme.md"
requires-python = ">=3.12"
authors = [{name = "Unknown", email = "unknown@example.com"}]
license = "MIT"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    "pyyaml",
    "scikit-learn",
    "joblib",
    "tensorflow",
    "matplotlib",
    "prometheus-client"
]

[project.scripts]
prometheus-ad-cli = "cli:main"

[project.urls]
Homepage = "https://github.com/vpuhoff/prometheus-anomaly-detection-lstm"